src/test/deca/syntax/invalid/created/if-then-else-empty-condition.deca
// Test d'un if then else avc une condition vide

{
    if () {
        print("Oui");
    } else {
        print("Non");
    }
}